istio-ingress-configs/airflow.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: airflow
spec:
  hosts:
    - airflow.ig.ingtra.net
  http:
    - name: airflow-webserver
      route:
      - destination:
          host: airflow-webserver.airflow.svc.cluster.local
          port: 
            number: 8080
  gateways:
    - internal-gateway
