istio-ingress-configs/argocd.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
spec:
  hosts:
    - argocd.ig.ingtra.net
  http:
    - name: argocd-server
      route:
      - destination:
          host: argocd-server.argocd.svc.kg.ingtra.net
          port: 
            number: 443
  gateways:
    - internal-gateway
