istio-ingress-configs/harbor.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: harbor-gateway
spec:
  selector:
    istio: internal-ingress
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - harbor.ingtra.net
      tls:
        credentialName: ingtra-net-tls
        mode: SIMPLE

---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: harbor
spec:
  hosts:
    - harbor.mdc.ingtra.net
  location: MESH_EXTERNAL
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: harbor
spec:
  hosts:
    - harbor.ingtra.net
  http:
    - route:
        - destination:
            host: harbor.mdc.ingtra.net
  gateways:
    - harbor-gateway

#---
#apiVersion: networking.istio.io/v1beta1
#kind: Gateway
#metadata:
#  name: harbor-gateway-external
#spec:
#  selector:
#    istio: external-ingress
#  servers:
#    - port:
#        number: 443
#        name: https
#        protocol: HTTPS
#      hosts:
#        - harbor.ingtra.net
#      tls:
#        credentialName: ingtra-net-tls
#        mode: SIMPLE
#
#---
#apiVersion: networking.istio.io/v1beta1
#kind: VirtualService
#metadata:
#  name: harbor-external
#spec:
#  hosts:
#    - harbor.ingtra.net
#  http:
#    - match:
#        - method:
#            exact: POST
#      route:
#        - destination:
#            host: harbor.mdc.ingtra.net
#  gateways:
#    - harbor-gateway-external
