istio-ingress-configs/kibana.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kibana
spec:
  hosts:
    - kibana.ig.ingtra.net
  http:
    - name: kibana
      route:
      - destination:
          host: kibana-kibana.kibana.svc.cluster.local
          port: 
            number: 5601
  gateways:
    - internal-gateway
