istio-ingress-configs/opendash.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: opendash
spec:
  hosts:
    - opendash.ig.ingtra.net
  http:
    - name: opendash
      route:
      - destination:
          host: opensearch-dashboards.opensearch-dashboards.svc.rke.mdc.ingtra.net
          port: 
            number: 5601
  gateways:
    - internal-gateway
